v.0.5.1
- enabled display league logotype (if exists) instead F1 logotype
- added trigger to pit column in race session layout - disable source on zero value

v.0.5
- moved render options to public_vars.json - ability to change options in GUI
- added lineup layout
- added team season progress (points)
- minor changes related to public_vars usage
- minor changes in driver/team cell components

v.0.4.1
- fixed driver/team cells in race and quali layout

v.0.4
- removed stints header in race layout
- fixed header when sprint/main race
- merged header component for season progress layouts
- added layout for Season progress for quali
- added team marks on driver standings
- added stickers to Race layout
- another minor changes

v.0.3
- fixed render race results when data not from live
- fixed colour of country codes in progress layouts

v.0.2
- changed pit stops/laps margins
- changed position number alignment
- added layout for Calendar
- added layout for Driver Standings
- added layout for Team Standings
- added layout for Season Progress (Pos and PTS)




ToDo:
- tyre compound usage details (waiting for telemetry gathering update)